<resources>
    <string name="app_name">DDUCKROCK</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="action_settings">Settings</string>

    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="title_activity_main3">Main3Activity</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="wallet_title">구매한 코인 등록</string>
    <string name="coinCalculatorTitle">코인 계산</string>
    <string name="coin_value">코인 가격</string>
    <string name="buy_value">구입한\n가격</string>
    <string name="buy_mount">구입한\n수량</string>
    <string name="coin_mount">코인 보유량</string>
    <string name="coin_graph">코인 그래프</string>
    <string name="cost_type">원</string>
    <string name="EA_String">EA</string>
    <string name="total_buy_cost_text">구매한\n총액</string>
    <string name="submit_text">등록하기</string>
    <string name="sell_wallet_title">판매한 코인 등록</string>
    <string name="sell_mount_text">판매한 수량</string>
    <string name="sell_coin_cost_text">판매한 가격</string>
    <string name="over_sell_coin">갖고 있는 코인의 수량을 초과하셨습니다.</string>
    <string name="down_sell_coin">코인을 0개 밑으로 팔 수 없습니다.</string>
</resources>
