<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Spinner
            android:id="@+id/coinListSpinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/sell_mount_text"
            android:layout_marginTop="8dp"
            android:gravity="center"></TextView>
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:layout_marginBottom="12dp">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:gravity="start">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:hint="@string/coin_mount"
                    android:inputType="numberDecimal"
                    android:id="@+id/coinMountET"
                    android:layout_gravity="center"
                    android:paddingLeft="32dp"
                    />

            </android.support.design.widget.TextInputLayout>
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="6dp"
                android:src="@drawable/no_select_coin"
                android:layout_gravity="center_vertical|start"
                android:id="@+id/coinMountIV"/>
        </FrameLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            android:text="@string/EA_String"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/sell_coin_cost_text"
            android:layout_marginTop="8dp"
            android:gravity="center"></TextView>
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:layout_marginBottom="12dp">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:gravity="start">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:hint="@string/coin_value"
                    android:inputType="numberDecimal"
                    android:id="@+id/coin_costET"
                    android:layout_gravity="center"
                    android:paddingLeft="32dp"/>

            </android.support.design.widget.TextInputLayout>
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="6dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/no_select_money"
                android:layout_gravity="center_vertical|start"
                android:id="@+id/coin_costIV"/>
        </FrameLayout>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cost_type"
            android:layout_marginTop="8dp"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/red_color_1">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="판매한\n총액"
            android:textStyle="bold"
            android:textColor="@color/white_color"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="end|center_vertical"
            android:text=""
            android:textSize="20dp"
            android:id="@+id/resultTV"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cost_type"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/blue_color">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/submit_text"
                android:textColor="@color/white_color"
                android:textSize="18dp"
                android:backgroundTint="@color/red_color_2"
                android:id="@+id/registrationBtn"
                tools:targetApi="lollipop" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>